[package]
name = "helius-sdk"
version = "0.1.1"
edition = "2021"
authors = ["bgreni"]
description = "Rust implementation of the Helius SDK"
readme = "README.md"
repository = "https://github.com/bgreni/helius-rust-sdk"
homepage = "https://github.com/bgreni/helius-rust-sdk"
license = "MIT"
keywords = ["solana", "helius"]
categories = ["cryptography::cryptocurrencies"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.16", features = ["blocking", "json"] }
serde-enum-str = "0.3.2"
serde_json = "1.0.96"
serde = { version = "1.0.160", features = ["derive"] }
solana-client = "1.14.18"
solana-sdk = "1.14.18"
derive-alias = "0.1.0"

