[package]
name = "helius-sdk"
version = "0.2.0"
edition = "2021"
authors = ["bgreni"]
description = "Rust implementation of the Helius SDK"
readme = "README.md"
repository = "https://github.com/bgreni/helius-rust-sdk"
homepage = "https://github.com/bgreni/helius-rust-sdk"
license = "MIT"
keywords = ["solana", "helius"]
categories = ["cryptography::cryptocurrencies"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.23", features = ["blocking", "json"] }
serde-enum-str = "0.4.0"
serde_json = "1.0.111"
serde = { version = "1.0.195", features = ["derive"] }
solana-client = "1.17.16"
solana-sdk = "1.17.16"
derive-alias = "0.1.0"

